# mybro

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  README.md  umans-proxy-rust-SPEC.md
.github/workflows/: ci.yml  release.yml
migrations/: 001_initial.sql
scripts/: test-client.sh
src/: catalog.rs  config.rs  constants.rs  db.rs  errlog.rs  gate.rs  handoff_cache.rs  keypool.rs  main.rs  mock_upstream.rs  otel.rs  payload.rs  persist.rs  schema_norm.rs  sessions.rs  stats.rs  upstream.rs  usage.rs  usage_parse.rs  vision.rs
src/routes/: chat.rs  config_api.rs  dashboard.rs  healthz.rs  keys_api.rs  messages.rs  mod.rs  models_api.rs  restart.rs  stats_api.rs  stream.rs  usage_api.rs  wallpaper.rs
uman-frontend/: components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
uman-frontend/src/: App.tsx  index.css
uman-frontend/src/components/: cache-card.tsx  health-card.tsx  in-flight-card.tsx  keys-card.tsx  login-page.tsx  metric-card.tsx  models-card.tsx  recent-requests-table.tsx  stats-cards.tsx  stats-chart.tsx  stats-filter-bar.tsx  status-bar.tsx  token-stats-card.tsx
uman-frontend/src/components/ui/: badge.tsx  select.tsx
uman-frontend/src/hooks/: use-gate.ts  use-health.ts  use-recent-requests.ts  use-stats-filter.tsx  use-stats-summary.ts
uman-frontend/src/lib/: api.ts  utils.ts
